--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ git # Miscellaneous
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
 
+# Firebase files
+**/ios/Runner/GoogleService-Info.plist
+**/android/app/google-services.json
+
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
