--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cloud_firestore: ^0.12.10
   dartz: ^0.8.8
   equatable: ^0.6.0
+  flutter_bloc: ^2.0.1
 
 dev_dependencies:
   flutter_test:
