--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dartz: ^0.8.8
   equatable: ^0.6.0
   flutter_bloc: ^2.0.1
+  get_it: ^3.0.3
 
 dev_dependencies:
   flutter_test:
