--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   firebase_auth: ^0.14.0+8
   cloud_firestore: ^0.12.10
+  google_sign_in: ^4.0.14
   dartz: ^0.8.8
   equatable: ^0.6.0
   flutter_bloc: ^2.0.1
